--- a/manuscript.Rmd
+++ b/manuscript.Rmd
@@ -6,21 +6,8 @@ output:
     toc: false
 linestretch: 1
 bibliography: references.bib
-abstract: |
-  Preregistration is becoming increasingly popular in the psychological sciences.
-  At the same time, many researchers struggle to make precise predictions and feel overwhelmed by the need to prespecify every detail of their analysis plan.
-  Should they surrender and discard the idea of preregistration altogether?
-  Not at all.
-  We argue for the benefits of preregistration beyond strictly confirmatory studies.
-  Grounded in Bayesian reasoning, we define a formal objective for preregistration that neither declares changes to a preregistration to be sinful nor punishes rigour.
-  This objective rests on the relevance of "theoretical risk", a generalization of type-I error rate, for judging the evidential support for theories.
-  We propose that preregistration should aim to reduce the uncertainty in judging the theoretical risk instead of directly limiting the type-I error rate.
-  We argue that this reformulation extends the utility of preregistration, provides principled justification for preregistration and is more closely aligned with researchers' intuition.
-  If we do not know what a researcher did, we have great uncertainty about the theoretical risk they took, which severely limits the utility of the researchers' evidence.
-  Preregistration effectively reduces this uncertainty and therefore generates more persuasive evidence.
+abstract: "`r paste0(readLines('abstract.md'), collapse = ' ')`"
 ---
-
-<!-- README.md is generated from README.Rmd. Please edit that file -->
 
 ```{r, include = FALSE}
 knitr::opts_chunk$set(
