--- a/references.bib
+++ b/references.bib
@@ -138,5 +138,13 @@
   doi = {10.1063/1.2821302}
 }
 
-
-
+@book{popperLogicScientificDiscovery2002,
+  title = {The Logic of Scientific Discovery},
+  author = {Popper, Karl R},
+  year = {2002},
+  publisher = {{Routledge}},
+  address = {{London; New York}},
+  isbn = {978-0-203-99462-7 978-0-415-27843-0 978-0-415-27844-7},
+  langid = {english},
+  annotation = {OCLC: 62269119}
+}
