try to load encoding

--- a/manuscript.Rmd
+++ b/manuscript.Rmd
@@ -29,7 +29,12 @@ if(!requireNamespace("tikzDevice"))install.packages("tikzDevice")
 
 options(
   tikzDefaultEngine = "xetex",
-  tikzXelatexPackages = c(getOption("tikzXelatexPackages"), "\\usepackage{amsfonts}", "\\usepackage{libertine}")
+  tikzXelatexPackages = c(
+    getOption("tikzXelatexPackages"),
+    "\\usepackage{amsfonts}",
+    "\\usepackage[utf8]{inputenc}",
+    "\\usepackage{libertine}"
+  )
 )
 ```
 
