Revert "try to load encoding"
This reverts commit 054312fd65f3212acfa70dc598322ce81056cc79.

--- a/manuscript.Rmd
+++ b/manuscript.Rmd
@@ -29,12 +29,7 @@ if(!requireNamespace("tikzDevice"))install.packages("tikzDevice")
 
 options(
   tikzDefaultEngine = "xetex",
-  tikzXelatexPackages = c(
-    getOption("tikzXelatexPackages"),
-    "\\usepackage{amsfonts}",
-    "\\usepackage[utf8]{inputenc}",
-    "\\usepackage{libertine}"
-  )
+  tikzXelatexPackages = c(getOption("tikzXelatexPackages"), "\\usepackage{amsfonts}", "\\usepackage{libertine}")
 )
 ```
 
