--- a/references.bib
+++ b/references.bib
@@ -57,7 +57,7 @@
 @article{simmonsPreregistrationWhyHow2021,
   title = {Pre-Registration: {{Why}} and {{How}}},
   shorttitle = {Pre-Registration},
-  author = {P. Simmons, Joseph and D. Nelson, Leif and Simonsohn, Uri},
+  author = {Simmons, Joseph P. and Nelson, Leif D. and Simonsohn, Uri},
   year = {2021},
   journal = {Journal of Consumer Psychology},
   volume = {31},
@@ -147,4 +147,13 @@
   isbn = {978-0-203-99462-7 978-0-415-27843-0 978-0-415-27844-7},
   langid = {english},
   annotation = {OCLC: 62269119}
+}
+
+@article{goldin-meadowWhyPreregistrationMakes2016,
+  title = {Why {{Preregistration Makes Me Nervous}}},
+  author = {{Goldin-Meadow}, Susan},
+  year = {2016},
+  month = aug,
+  journal = {APS Observer},
+  volume = {29}
 }
