--- a/README.Rmd
+++ b/README.Rmd
@@ -13,6 +13,8 @@ knitr::opts_chunk$set(
 
 # Why does preregistration increase the persuasiveness of evidence? A Bayesian rationalization.
 
-```{r, echo=FALSE, results='asis'}
+```{r abstract, echo=FALSE, results='asis'}
 cat(readLines('abstract.md'))
 ```
+
+[🗎 PDF of draft 🗎](https://aaronpeikert.github.io/bayes-prereg/manuscript.pdf)
